# deVin-Enterpise-Chain

./: .gitmodules  README.md
chain/node/: Cargo.toml
chain/node/src/: chain_spec.rs  command.rs  command_helper.rs  rpc.rs  service.rs
chain/pallets/organizations/: Cargo.toml
chain/pallets/organizations/src/: lib.rs
chain/pallets/products/: Cargo.toml
chain/pallets/products/src/: lib.rs  mock.rs  tests.rs
chain/pallets/rbac/: Cargo.toml
chain/pallets/rbac/src/: lib.rs
chain/pallets/template/: Cargo.toml
chain/pallets/tracking/: Cargo.toml
chain/pallets/tracking/src/: builders.rs  lib.rs  mock.rs  tests.rs  types.rs
chain/runtime/: Cargo.toml
chain/runtime/src/: lib.rs
ui/: .env  package-lock.json  package.json
ui/public/: index.html  manifest.json
ui/src/: App.js
ui/src/components/: ContactInfo.js  CreateBtn.js  Interactor.js  TemplateModule.js
ui/src/config/: common.json
ui/src/screens/home/: index.js
ui/src/screens/organization/: index.js
ui/src/substrate-lib/: SubstrateContext.js
